# institutional-crypto-funding-analyzer

./: .env.template  .gitignore  LICENSE.txt  README.markdown  README.md  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
data/: backtest_results.csv  fetcher.py  sample_funding_rates.csv  storage.py
docs/: installation.md  usage.md
src/funding_analyzer/: __init__.py  src_funding_analyzer___init__.py
src/funding_analyzer/core/: analyzer.py  data_models.py  exchange_manager.py
src/funding_analyzer/reporting/: performance.py  visualizations.py
src/funding_analyzer/risk/: manager.py  metrics.py
src/funding_analyzer/strategies/: base.py  cross_exchange.py  momentum.py  statistical_arb.py
src/funding_analyzer/utils/: helpers.py  notifications.py
