[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "institutional-crypto-funding-analyzer"
version = "2.1.0"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "ccxt>=4.0.0",
    "ccxt.pro>=4.0.0",
    "sqlalchemy>=2.0.0",
    "timescale>=1.0.0",
    "pyotp>=2.8.0",
    "cryptography>=40.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0.0",
]
